# dataquest

./: .gitignore  Helpful Functions - Python.ipynb  Notes - Command Line.ipynb  Notes - Data Cleaning & Analysis.ipynb  Notes - Data Cleaning Advanced.ipynb  Notes - Data Cleaning Basics.ipynb  Notes - Data Cleaning: Walkthrough.ipynb  Notes - Data Visualization (Exploratory).ipynb  Notes - Data Visualization (Storytelling).ipynb  Notes - Numpy & Pandas.ipynb  Notes - SQL Fundamentals.ipynb  Notes - Web Scraping Example.ipynb  Notes - Web Scraping.ipynb  Notes.ipynb  pyproject.toml
notebooks/: 2 - eBay Kleinanzeigen.ipynb  3 - Recent Graduates.ipynb  4 - Gender Gaps.ipynb  5 - Employee Exit Surveys.ipynb  6 - SAT Scores.ipynb
projects/: 1 - Hacker News.ipynb
