[tool.poetry]
name = "dataquest"
version = "0.1.0"
description = ""
authors = ["Matthew Quinn <matthew.i.quinn@accenture.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
